--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-Flask==2.0.3
-Flask-SQLAlchemy==2.5.1
-SQLAlchemy<2.0
-pandas==1.1.5
+Flask==2.3.3
+Flask-SQLAlchemy==3.1.1
+SQLAlchemy==2.0.23
+pandas==1.5.3
 Flask-Testing==0.8.1
-gunicorn==20.1.0
-numpy==1.19.5
+gunicorn==21.2.0
+numpy==1.24.3
