--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,5 @@ Flask-SQLAlchemy==3.1.1
 SQLAlchemy==2.0.23
 pandas==1.5.3
 Flask-Testing==0.8.1
-gunicorn==21.2.0
+gunicorn==22.0.0  # 升级到最新稳定版本
 numpy==1.24.3
-uvicorn==0.22.0
