--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Flask==2.3.3
 Flask-SQLAlchemy==3.1.1
 SQLAlchemy==2.0.23
-pandas==1.5.3
+pandas==2.2.2  # 更新到支持 3.11 的版本
 Flask-Testing==0.8.1
-gunicorn==22.0.0  # 升级到最新稳定版本
-numpy==1.24.3
+gunicorn==22.0.0
+numpy==1.26.4  # 更新到支持 3.11 的版本
